split diagram views; explore vs. mapping
